--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,20 @@
 }
 .container{
     background-color: azure;
-    margin: 0;
-    padding: 0;
-    border-top: 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
-.img{
-    width: 30px;
-    length: 30px;
+img{
+    width: 60px;
+    length: 70px;
+    border-radius: 500px;
+    display: block;
+}
+.logo{
+    margin-left: 20px;
+    letter-spacing: 0.1em;
+    text-align: center;
+    margin-top: 20px;
 }
