--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,12 @@
     padding: 0
 }
 .container{
-    background-color: azure;
+    background-color: rgb(189, 231, 231);
     display: block;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+
 }
 img{
     width: 60px;
