--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 *body{
     margin: 0;
-    padding: 0
+    padding: 20px;
 }
 .container{
     background-color: rgb(189, 231, 231);
@@ -8,7 +8,6 @@
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-
 }
 img{
     width: 60px;
